// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<button
  autoFocus={false}
  className="button"
  disabled={false}
  id={undefined}
  onClick={[Function]}
  role="button"
  style={undefined}
  type="button"
>
  Make Awesome!
</button>
`;

exports[`Renders correctly with defined props 1`] = `
<button
  autoFocus={true}
  className="button outer"
  disabled={true}
  id="buttons-id"
  onClick={[Function]}
  role="button"
  style={undefined}
  type="submit"
>
  Make Awesome!
</button>
`;
